# pc_cline

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  项目文档.md
.gitee/workflows/: build-desktop.yml
.github/workflows/: build-desktop.yml  build.yml  macos-build.yml
.qwen/: project-skill.md  settings.json  settings.json.orig
.qwen/skills/git-archaeology/: SKILL.md
.qwen/skills/tauri-windows-native-dll/: SKILL.md
.workflow/: gitee-ci.yml  tag-pipeline.yml
config/: secrets.env.example
docs/: index.html  package.json  vercel.json
docs/admin/: index.html
docs/api/: Cargo.toml  Makefile  ai-toreder-server.service  nginx-downloads.conf  nginx-license.conf
docs/api/admin/: add.js  expire.js  index.html  lib.js  list.js  remove.js
docs/api/lib/: mongo.js
docs/api/license/: activate.js  verify.js
docs/api/src/: main.rs
patches/esaxx-rs/: Cargo.toml  build.rs
python-backend/: aitoreder-backend.spec
qiniu/: qupload.conf.example.json
scripts/: manage-keys.mjs  release.sh
scripts/ci/: build_desktop.ps1  build_desktop.sh
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  license.rs  state.rs
src/api/: tauri.ts
src/stores/: settings.ts  tts.ts
