[package]
name = "ai-toreder-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
