[package]
edition = "2018"
name = "esaxx-rs"
version = "0.1.10"
authors = ["Nicolas Patry <patry.nicolas@protonmail.com>"]
description = "Wrapping around sentencepiece's esaxxx library. (patched: removed .static_crt(true) for MSVC compat)"
homepage = "https://github.com/Narsil/esaxx-rs"
documentation = "https://docs.rs/esaxx-rs"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Narsil/esaxx-rs"

[dependencies]

[build-dependencies.cc]
version = "1.0"
optional = true

[features]
cpp = ["cc"]
default = ["cpp"]
